update: added more flexibility to the service use